@@ -1,2 +1,0 @@
-AnyObjectId[957b6752af9a60c1bb2a4f65db0e90e5ce00f521] was removed in git history.
-Apache SVN contains full history.
